ConsoleApp1/obj/Debug/net7.0/MyGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\krzys\Desktop\GPlanguage\ConsoleApp1\Content\MyGrammar.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ConsoleApp1.Content {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class MyGrammarParser : Parser {
	public const int
		WS=1, LPAREN=2, RPAREN=3, LBRACE=4, RBRACE=5, ADD=6, SUB=7, MUL=8, DIV=9, 
		MOD=10, ASS=11, EQ=12, NEQ=13, LE=14, LEQ=15, GE=16, GEQ=17, AND=18, OR=19, 
		NOT=20, TRUE=21, FALSE=22, IF=23, WHILE=24, PRINT=25, SCAN=26, NUMBER=27, 
		NUM_VAR=28, BOOL_VAR=29;
	public const int
		RULE_program = 0, RULE_expressions = 1, RULE_if_statement = 2, RULE_while_loop = 3, 
		RULE_print_call = 4, RULE_scan_call = 5, RULE_assignment = 6, RULE_comparisson_type = 7, 
		RULE_logic_operator = 8, RULE_aritmetic_operator_strong = 9, RULE_aritmetic_operator_weak = 10, 
		RULE_bool_value = 11, RULE_numeric_value = 12;
	public static readonly string[] ruleNames = {
		"program", "expressions", "if_statement", "while_loop", "print_call", 
		"scan_call", "assignment", "comparisson_type", "logic_operator", "aritmetic_operator_strong", 
		"aritmetic_operator_weak", "bool_value", "numeric_value"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", 
		"'true'", "'false'", "'if'", "'while'", "'print'", "'scan'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "ADD", "SUB", "MUL", 
		"DIV", "MOD", "ASS", "EQ", "NEQ", "LE", "LEQ", "GE", "GEQ", "AND", "OR", 
		"NOT", "TRUE", "FALSE", "IF", "WHILE", "PRINT", "SCAN", "NUMBER", "NUM_VAR", 
		"BOOL_VAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MyGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MyGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 26; expressions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionsContext : ParserRuleContext {
		public If_statementContext if_statement() {
			return GetRuleContext<If_statementContext>(0);
		}
		public While_loopContext while_loop() {
			return GetRuleContext<While_loopContext>(0);
		}
		public Print_callContext print_call() {
			return GetRuleContext<Print_callContext>(0);
		}
		public Scan_callContext scan_call() {
			return GetRuleContext<Scan_callContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterExpressions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitExpressions(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionsContext expressions() {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_expressions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case IF:
				{
				State = 28; if_statement();
				}
				break;
			case WHILE:
				{
				State = 29; while_loop();
				}
				break;
			case PRINT:
				{
				State = 30; print_call();
				}
				break;
			case SCAN:
				{
				State = 31; scan_call();
				}
				break;
			case NUM_VAR:
			case BOOL_VAR:
				{
				State = 32; assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 36;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << SCAN) | (1L << NUM_VAR) | (1L << BOOL_VAR))) != 0)) {
				{
				State = 35; expressions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_statementContext : ParserRuleContext {
		public If_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_statement; } }
	 
		public If_statementContext() { }
		public virtual void CopyFrom(If_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class IfStatementContext : If_statementContext {
		public ITerminalNode IF() { return GetToken(MyGrammarParser.IF, 0); }
		public ITerminalNode LPAREN() { return GetToken(MyGrammarParser.LPAREN, 0); }
		public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(MyGrammarParser.RPAREN, 0); }
		public ITerminalNode LBRACE() { return GetToken(MyGrammarParser.LBRACE, 0); }
		public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		public ITerminalNode RBRACE() { return GetToken(MyGrammarParser.RBRACE, 0); }
		public IfStatementContext(If_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterIfStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitIfStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_statementContext if_statement() {
		If_statementContext _localctx = new If_statementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_if_statement);
		try {
			_localctx = new IfStatementContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 38; Match(IF);
			State = 39; Match(LPAREN);
			State = 40; bool_value(0);
			State = 41; Match(RPAREN);
			State = 42; Match(LBRACE);
			State = 43; expressions();
			State = 44; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class While_loopContext : ParserRuleContext {
		public While_loopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_while_loop; } }
	 
		public While_loopContext() { }
		public virtual void CopyFrom(While_loopContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class WhileStatementContext : While_loopContext {
		public ITerminalNode WHILE() { return GetToken(MyGrammarParser.WHILE, 0); }
		public ITerminalNode LPAREN() { return GetToken(MyGrammarParser.LPAREN, 0); }
		public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(MyGrammarParser.RPAREN, 0); }
		public ITerminalNode LBRACE() { return GetToken(MyGrammarParser.LBRACE, 0); }
		public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		public ITerminalNode RBRACE() { return GetToken(MyGrammarParser.RBRACE, 0); }
		public WhileStatementContext(While_loopContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterWhileStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitWhileStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public While_loopContext while_loop() {
		While_loopContext _localctx = new While_loopContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_while_loop);
		try {
			_localctx = new WhileStatementContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 46; Match(WHILE);
			State = 47; Match(LPAREN);
			State = 48; bool_value(0);
			State = 49; Match(RPAREN);
			State = 50; Match(LBRACE);
			State = 51; expressions();
			State = 52; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Print_callContext : ParserRuleContext {
		public Print_callContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print_call; } }
	 
		public Print_callContext() { }
		public virtual void CopyFrom(Print_callContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PrintNumContext : Print_callContext {
		public ITerminalNode PRINT() { return GetToken(MyGrammarParser.PRINT, 0); }
		public ITerminalNode LPAREN() { return GetToken(MyGrammarParser.LPAREN, 0); }
		public Numeric_valueContext numeric_value() {
			return GetRuleContext<Numeric_valueContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(MyGrammarParser.RPAREN, 0); }
		public PrintNumContext(Print_callContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterPrintNum(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitPrintNum(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintNum(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PrintBoolContext : Print_callContext {
		public ITerminalNode PRINT() { return GetToken(MyGrammarParser.PRINT, 0); }
		public ITerminalNode LPAREN() { return GetToken(MyGrammarParser.LPAREN, 0); }
		public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(MyGrammarParser.RPAREN, 0); }
		public PrintBoolContext(Print_callContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterPrintBool(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitPrintBool(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintBool(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Print_callContext print_call() {
		Print_callContext _localctx = new Print_callContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_print_call);
		try {
			State = 64;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new PrintNumContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 54; Match(PRINT);
				State = 55; Match(LPAREN);
				State = 56; numeric_value(0);
				State = 57; Match(RPAREN);
				}
				break;

			case 2:
				_localctx = new PrintBoolContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 59; Match(PRINT);
				State = 60; Match(LPAREN);
				State = 61; bool_value(0);
				State = 62; Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Scan_callContext : ParserRuleContext {
		public Scan_callContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scan_call; } }
	 
		public Scan_callContext() { }
		public virtual void CopyFrom(Scan_callContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ScanBoolContext : Scan_callContext {
		public ITerminalNode SCAN() { return GetToken(MyGrammarParser.SCAN, 0); }
		public ITerminalNode LPAREN() { return GetToken(MyGrammarParser.LPAREN, 0); }
		public ITerminalNode BOOL_VAR() { return GetToken(MyGrammarParser.BOOL_VAR, 0); }
		public ITerminalNode RPAREN() { return GetToken(MyGrammarParser.RPAREN, 0); }
		public ScanBoolContext(Scan_callContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterScanBool(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitScanBool(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScanBool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ScanNumContext : Scan_callContext {
		public ITerminalNode SCAN() { return GetToken(MyGrammarParser.SCAN, 0); }
		public ITerminalNode LPAREN() { return GetToken(MyGrammarParser.LPAREN, 0); }
		public ITerminalNode NUM_VAR() { return GetToken(MyGrammarParser.NUM_VAR, 0); }
		public ITerminalNode RPAREN() { return GetToken(MyGrammarParser.RPAREN, 0); }
		public ScanNumContext(Scan_callContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterScanNum(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitScanNum(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScanNum(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Scan_callContext scan_call() {
		Scan_callContext _localctx = new Scan_callContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_scan_call);
		try {
			State = 74;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new ScanNumContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 66; Match(SCAN);
				State = 67; Match(LPAREN);
				State = 68; Match(NUM_VAR);
				State = 69; Match(RPAREN);
				}
				break;

			case 2:
				_localctx = new ScanBoolContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 70; Match(SCAN);
				State = 71; Match(LPAREN);
				State = 72; Match(BOOL_VAR);
				State = 73; Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
	 
		public AssignmentContext() { }
		public virtual void CopyFrom(AssignmentContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AssignBoolContext : AssignmentContext {
		public ITerminalNode BOOL_VAR() { return GetToken(MyGrammarParser.BOOL_VAR, 0); }
		public ITerminalNode ASS() { return GetToken(MyGrammarParser.ASS, 0); }
		public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		public AssignBoolContext(AssignmentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterAssignBool(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitAssignBool(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignBool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignNumContext : AssignmentContext {
		public ITerminalNode NUM_VAR() { return GetToken(MyGrammarParser.NUM_VAR, 0); }
		public ITerminalNode ASS() { return GetToken(MyGrammarParser.ASS, 0); }
		public Numeric_valueContext numeric_value() {
			return GetRuleContext<Numeric_valueContext>(0);
		}
		public AssignNumContext(AssignmentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterAssignNum(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitAssignNum(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignNum(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_assignment);
		try {
			State = 82;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case NUM_VAR:
				_localctx = new AssignNumContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 76; Match(NUM_VAR);
				State = 77; Match(ASS);
				State = 78; numeric_value(0);
				}
				break;
			case BOOL_VAR:
				_localctx = new AssignBoolContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 79; Match(BOOL_VAR);
				State = 80; Match(ASS);
				State = 81; bool_value(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Comparisson_typeContext : ParserRuleContext {
		public ITerminalNode EQ() { return GetToken(MyGrammarParser.EQ, 0); }
		public ITerminalNode NEQ() { return GetToken(MyGrammarParser.NEQ, 0); }
		public ITerminalNode LE() { return GetToken(MyGrammarParser.LE, 0); }
		public ITerminalNode LEQ() { return GetToken(MyGrammarParser.LEQ, 0); }
		public ITerminalNode GE() { return GetToken(MyGrammarParser.GE, 0); }
		public ITerminalNode GEQ() { return GetToken(MyGrammarParser.GEQ, 0); }
		public Comparisson_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparisson_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterComparisson_type(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitComparisson_type(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisson_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Comparisson_typeContext comparisson_type() {
		Comparisson_typeContext _localctx = new Comparisson_typeContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_comparisson_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NEQ) | (1L << LE) | (1L << LEQ) | (1L << GE) | (1L << GEQ))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Logic_operatorContext : ParserRuleContext {
		public ITerminalNode AND() { return GetToken(MyGrammarParser.AND, 0); }
		public ITerminalNode OR() { return GetToken(MyGrammarParser.OR, 0); }
		public Logic_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logic_operator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterLogic_operator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitLogic_operator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogic_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Logic_operatorContext logic_operator() {
		Logic_operatorContext _localctx = new Logic_operatorContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_logic_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			_la = _input.La(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Aritmetic_operator_strongContext : ParserRuleContext {
		public ITerminalNode MUL() { return GetToken(MyGrammarParser.MUL, 0); }
		public ITerminalNode DIV() { return GetToken(MyGrammarParser.DIV, 0); }
		public ITerminalNode MOD() { return GetToken(MyGrammarParser.MOD, 0); }
		public Aritmetic_operator_strongContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aritmetic_operator_strong; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.EnterAritmetic_operator_strong(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyGrammarListener typedListener = listener as IMyGrammarListener;
			if (typedListener != null) typedListener.ExitAritmetic_operator_strong(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyGrammarVisitor<TResult> typedVisitor = visitor as IMyGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAritmetic_operator_strong(this);
			else return visitor.VisitChildren(this);
		}
	}
